# Nexus-Dash

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  ALL_FIXED.md  CLAUDE.md  CODEX_HANDOFF.md  COMPREHENSIVE_AUDIT_2026-04-13.md  DATA_OVERRIDE_FIX.md  IMPLEMENTATION_NOTES.md  OTA_UPDATE_READY.md  PROP_RULES_AUDIT.md  RELEASE_SUMMARY.md  SESSION_NOTES.md  build-android.sh  build-linux.sh  build-windows.ps1  fix_targets.py  index.html  load-test-data.html  load-test-data.js  nexus-finance-audit.md  package-lock.json  package.json  postcss.config.cjs  prebuild-tauri-config.js  tailwind.config.js  tsconfig.node.json  upload-release-curl.ps1  upload-release.ps1  validation-contract.md  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.local.json
.factory/: init.sh  services.yaml
.github/workflows/: release.yml
.hermes/plans/: 2026-04-05_215500-nexus-debug-redesign.md  2026-04-05_221500-changes-applied.md  (+2 more)
design/: app-audit-2026-04-08.md  dashboard-chart-design-options.html  theme-reset-mockups.html
docs/: desktop-ota.md  improvement-plan-2026-03-24.md
scripts/: android-build.ps1  android-install.ps1  generate-desktop-github-ota.mjs  generate-latest-json.js  migrate-rgba-to-tokens.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/nsis-template/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/lib/: logger.ts  (+24 more)
supabase/: README.md
(+100 files in other folders)
