[package]
name = "nexus"
version = "1.0.10"
description = "Nexus — Trader Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
