[package]
name = "nexus"
version = "1.2.2"
description = "Nexus — Trader Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.5"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
